[package]
name = "pxlha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
env_logger = { version = "0.9.0", default-features = false, features = ["atty", "termcolor"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "pnm"] }
log = "0.4.17"
memmap2 = "0.5.3"
nix = "0.24.1"
wayland-client = "0.30.0"
wayland-protocols = { version = "0.30.0", features=["client", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
colors-transform = "0.2.11"
hass-rs = { version = "0.2", features = ["async-std-runtime"] }
futures = "0.3.0"
async-std = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"